Fixed Journal overflow bug

--- a/frontend/src/journal.css
+++ b/frontend/src/journal.css
@@ -88,6 +88,8 @@
   width: 100%;
   height: 100%;
   z-index: 1;
+  overflow: hidden;
+  overflow-y: scroll;
   /* position: absolute; */
   /* display: none; */
 }
